@@ -125,12 +125,9 @@ class OrderServiceTest {
 
     @Test
     void updateNextStatus_ValidOrder_OrderStatusUpdatedSuccessfully() throws JsonProcessingException {
-        when(orderRepository.save(any())).thenReturn(orders.getFirst());
-//        when(orderRepository.findAll()).thenReturn(orders);
-//        String result = orderService.findAll();
-
+        when(orderRepository.findById(orders.get(0).getIdOrder())).thenReturn(Optional.of(orders.get(0)));//        when(orderRepository.findAll()).thenReturn(orders);
+        when(orderRepository.save(any(Order.class))).thenReturn(orders.get(0));
         orderService.updateNextStatus(orders.get(0).getIdOrder());
-
         assertEquals("Waiting Payment", orders.get(0).getState().toString()); // Expecting status to be updated to "Waiting Payment"
     }
 
